--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,24 +3,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Debugger",
       "type": "node",
       "request": "launch",
-      "runtimeExecutable": "node",
-      "runtimeArgs": [
-        "--nolazy",
-        "-r",
-        "ts-node/register/transpile-only"
-      ],
-      "args": [
-        "src/server.ts"
-      ],
-      "cwd": "${workspaceRoot}",
-      "internalConsoleOptions": "openOnSessionStart",
-      "skipFiles": [
-        "<node_internals>/**",
-        "node_modules/**"
-      ]
+      "name": "Launch Program",
+      "program": "${workspaceFolder}/src/server.ts",
+      "preLaunchTask": "npm: build",
+      "sourceMaps": true,
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"]
     }
   ]
 }
