--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./dist",
     "sourceMap": true,
     "allowJs": true,
     "esModuleInterop": true,
     "strict": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
