--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "npm-run-all --parallel watch:server watch:build",
-    "watch:server": "nodemon \"./dist/server.js\" --watch \"./dist\" ",
-    "watch:build": "webpack --watch",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch src --ext js,ts --exec 'ts-node' src/server.ts",
+    "clean": "rimraf dist",
+    "build:ts": "npm run clean && tsc",
+    "build": "npm run build:ts && cp package*.json dist && npm ci --only=prod --prefix dist"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/randalvance/node-typescript.git"
   },
-  "keywords": [],
+  "keywords": [
+    "node",
+    "typescript",
+    "example"
+  ],
   "author": "Randal Vance Cunanan",
   "license": "ISC",
   "bugs": {
@@ -27,12 +30,8 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
-    "@types/webpack": "^4.41.21",
     "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
