--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "sourceMap": true,
-    "allowJs": true,
-    "esModuleInterop": true,
-    "strict": true
+      "target": "es6",
+      "module": "commonjs",
+      "sourceMap": true,
+      "allowJs": true,
+      "esModuleInterop": true,
+      "strict": true,
+      "outDir": "dist"
   },
-  "exclude": [
-    "node_modules"
+  "include": [
+      "src/**/*.ts"
   ]
 }
