--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
     "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
