--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,14 @@ steps:
     PathtoPublish: '$(Build.SourcesDirectory)/dist'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+    
+- task: AzureRmWebAppDeployment@4
+  displayName: 'Deploy to Azure'
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: $(AzureSubscription)
+    appType: 'webAppLinux'
+    WebAppName: 'node-typescript-randal'
+    packageForLinux: '$(Build.ArtifactStagingDirectory)'
+    RuntimeStack: 'NODE|12-lts'
+    StartupCommand: 'node server.js'
